--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -43,4 +43,4 @@ spring.jpa.properties.hibernate.hbm2ddl.auto=create-drop
 #mybatis.type-aliases-package=com.dongnao.jack.bean
 
 mybatis.typeAliasesPackage=com.dongnao.jack.bean
-mybatis.mapperLocations=classpath:com/dongnao/jack/xml/*Mapper.xml
+mybatis.mapperLocations=classpath*:com/dongnao/jack/xml/*Mapper.xml
